--- a/src/BPlusTree/TODO.txt
+++ b/src/BPlusTree/TODO.txt
@@ -13,8 +13,8 @@ Dequeue => Write async in block (and clean reserved empty slot)
 
 	Performances : 
 		- Cache LRU for reading nodes
-		- batches writes at commit
 
 
+	Stream Factory (multiple reading vs one writing)
 	Multitasking (multiple readers, one writer)
 	LRU node cache
