--- a/src/BPlusTree/TODO.txt
+++ b/src/BPlusTree/TODO.txt
@@ -14,7 +14,5 @@ Dequeue => Write async in block (and clean reserved empty slot)
 	Performances : 
 		- Cache LRU for reading nodes
 
-
+	Clustered index (fixed size value on leaf)
 	Stream Factory (multiple reading vs one writing)
-	Multitasking (multiple readers, one writer)
-	LRU node cache
