--- a/src/BPlusTree/TODO.txt
+++ b/src/BPlusTree/TODO.txt
@@ -13,10 +13,7 @@ Dequeue => Write async in block (and clean reserved empty slot)
 
 	Performances : 
 		- Cache LRU for reading nodes
-		- Write Data pages on commit
-		- Clustered index for small data.
+		- Read_Node_From_Parent_Pointer Node<T>.Children, find a different solution, it gets the whole index in memory on readonly scenarios
 
 		- SODA, ASYNC batched commit
 
-	Clustered index (fixed size value on leaf)
-	Stream Factory (multiple reading vs one writing)
